# econrz

./: 404.html  glossary.md  index.html  mkdocs-tutorial  mkdocs.yml  pyproject.toml  reference.bib  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
assets/css/: extra.css
assets/js/: glossary.js
books/: index.html
books/krusell2014/: index.html
codes/: index.html
codes/tidydata/: index.html
custom_theme/overrides/: home.html  main.html
custom_theme/plugins/yml/: card.yml
data_science/: index.html
data_science/data_acquisition/: index.html
data_science/data_acquisition/html/: index.html
data_science/data_clean/: index.html
data_science/data_clean/cfps/: index.html
data_science/data_language/: index.html
data_science/data_language/codecheat/: index.html
data_science/data_language/conda/: index.html
data_science/data_source/: index.html
data_science/data_visualization/: index.html
docs/: glossary.md  summary.md
docs/assets/css/: extra.css
docs/books/: krusell2014.md
docs/literature/: blandin2022.md
docs/notebooks/: my_database.db  user_functions.ipynb  user_functions.md
economic_modelling/: index.html
getting_started/: index.html
glossary/: index.html
literature/: index.html
literature/blandin2022/: index.html
literature/economic_growth/: index.html
literature/education/: index.html
notebooks/: index.html
notebooks/user_functions/: index.html
print_page/: index.html
scientific_english/: index.html
scientific_english/hello/: index.html
search/: search_index.json
summary/: index.html
(+38 files in other folders)
