[tool.poetry]
name = "econrz"
version = "0.1.0"
description = ""
authors = ["kyrie1218 <kyrie1218@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

#[[tool.poetry.source]]
#name = "tsinghua"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
#default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
